WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272412
[RenderTreeBuilder] Out-of-flow box does not stretch its containing block (and not even its parent)
https://bugs.webkit.org/show_bug.cgi?id=272412
Summary
[RenderTreeBuilder] Out-of-flow box does not stretch its containing block (an...
alan
Reported
2024-04-09 11:58:54 PDT
ssia
Attachments
[fast-cq]Patch
(6.68 KB, patch)
2024-04-09 12:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-04-09 12:09:16 PDT
Created
attachment 470840
[details]
[fast-cq]Patch
EWS
Comment 2
2024-04-09 16:01:05 PDT
Committed
277275@main
(2f4378eb7afa): <
https://commits.webkit.org/277275@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470840
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-04-09 16:02:15 PDT
<
rdar://problem/126168568
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug