[RenderTreeBuilder] Out-of-flow box does not stretch its containing block (and not even its parent) https://bugs.webkit.org/show_bug.cgi?id=272412

Reviewed by Antti Koivisto.

1. Out-of-flow boxes do not affect containing block's preferred width.
2. Merge multiple m_internalMovesType == IsInternalMove::No scopes.
2. Rearrange conditions in LocalFrameViewLayoutContext::scheduleLayout by moving the most common  isLayoutPending() to the top (we normally dirty more than one renderer at a time).
3. Modernize RenderObject::invalidateContainerPreferredLogicalWidths

* Source/WebCore/page/LocalFrameViewLayoutContext.cpp:
(WebCore::LocalFrameViewLayoutContext::scheduleLayout):
* Source/WebCore/rendering/RenderObject.cpp:
(WebCore::RenderObject::invalidateContainerPreferredLogicalWidths):
* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::attachToRenderElementInternal):

Canonical link: https://commits.webkit.org/277275@main